; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_loopback.c_loopback_xmit.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_loopback.c_loopback_xmit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sk_buff = type { i32, i32 }
%struct.net_device = type { %struct.pcpu_lstats* }
%struct.pcpu_lstats = type { i32, i32, i32 }

@NET_RX_SUCCESS = common dso_local global i64 0, align 8
@NETDEV_TX_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sk_buff*, %struct.net_device*)* @loopback_xmit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @loopback_xmit(%struct.sk_buff* %0, %struct.net_device* %1) #0 {
  %3 = alloca %struct.sk_buff*, align 8
  %4 = alloca %struct.net_device*, align 8
  %5 = alloca %struct.pcpu_lstats*, align 8
  %6 = alloca %struct.pcpu_lstats*, align 8
  %7 = alloca i32, align 4
  store %struct.sk_buff* %0, %struct.sk_buff** %3, align 8
  store %struct.net_device* %1, %struct.net_device** %4, align 8
  %8 = load %struct.sk_buff*, %struct.sk_buff** %3, align 8
  %9 = call i32 @skb_orphan(%struct.sk_buff* %8)
  %10 = load %struct.sk_buff*, %struct.sk_buff** %3, align 8
  %11 = load %struct.net_device*, %struct.net_device** %4, align 8
  %12 = call i32 @eth_type_trans(%struct.sk_buff* %10, %struct.net_device* %11)
  %13 = load %struct.sk_buff*, %struct.sk_buff** %3, align 8
  %14 = getelementptr inbounds %struct.sk_buff, %struct.sk_buff* %13, i32 0, i32 1
  store i32 %12, i32* %14, align 4
  %15 = load %struct.net_device*, %struct.net_device** %4, align 8
  %16 = getelementptr inbounds %struct.net_device, %struct.net_device* %15, i32 0, i32 0
  %17 = load %struct.pcpu_lstats*, %struct.pcpu_lstats** %16, align 8
  store %struct.pcpu_lstats* %17, %struct.pcpu_lstats** %5, align 8
  %18 = load %struct.pcpu_lstats*, %struct.pcpu_lstats** %5, align 8
  %19 = call i32 (...) @smp_processor_id()
  %20 = call %struct.pcpu_lstats* @per_cpu_ptr(%struct.pcpu_lstats* %18, i32 %19)
  store %struct.pcpu_lstats* %20, %struct.pcpu_lstats** %6, align 8
  %21 = load %struct.sk_buff*, %struct.sk_buff** %3, align 8
  %22 = getelementptr inbounds %struct.sk_buff, %struct.sk_buff* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  store i32 %23, i32* %7, align 4
  %24 = load %struct.sk_buff*, %struct.sk_buff** %3, align 8
  %25 = call i64 @netif_rx(%struct.sk_buff* %24)
  %26 = load i64, i64* @NET_RX_SUCCESS, align 8
  %27 = icmp eq i64 %25, %26
  %28 = zext i1 %27 to i32
  %29 = call i64 @likely(i32 %28)
  %30 = icmp ne i64 %29, 0
  br i1 %30, label %31, label %41

31:                                               ; preds = %2
  %32 = load i32, i32* %7, align 4
  %33 = load %struct.pcpu_lstats*, %struct.pcpu_lstats** %6, align 8
  %34 = getelementptr inbounds %struct.pcpu_lstats, %struct.pcpu_lstats* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 4
  %36 = add nsw i32 %35, %32
  store i32 %36, i32* %34, align 4
  %37 = load %struct.pcpu_lstats*, %struct.pcpu_lstats** %6, align 8
  %38 = getelementptr inbounds %struct.pcpu_lstats, %struct.pcpu_lstats* %37, i32 0, i32 2
  %39 = load i32, i32* %38, align 4
  %40 = add nsw i32 %39, 1
  store i32 %40, i32* %38, align 4
  br label %46

41:                                               ; preds = %2
  %42 = load %struct.pcpu_lstats*, %struct.pcpu_lstats** %6, align 8
  %43 = getelementptr inbounds %struct.pcpu_lstats, %struct.pcpu_lstats* %42, i32 0, i32 1
  %44 = load i32, i32* %43, align 4
  %45 = add nsw i32 %44, 1
  store i32 %45, i32* %43, align 4
  br label %46

46:                                               ; preds = %41, %31
  %47 = load i32, i32* @NETDEV_TX_OK, align 4
  ret i32 %47
}

declare dso_local i32 @skb_orphan(%struct.sk_buff*) #1

declare dso_local i32 @eth_type_trans(%struct.sk_buff*, %struct.net_device*) #1

declare dso_local %struct.pcpu_lstats* @per_cpu_ptr(%struct.pcpu_lstats*, i32) #1

declare dso_local i32 @smp_processor_id(...) #1

declare dso_local i64 @likely(i32) #1

declare dso_local i64 @netif_rx(%struct.sk_buff*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
